<resources>
    <!-- Displayed in Xposed framework -->
    <string name="app_name">Niwatori - One Handed Mode</string>
    <string name="xposed_description" translatable="false">Slide Down, Movable and Small Screen.</string>

    <string name="billing_is_not_supported">Billing isn\'t supported</string>

    <!-- Shortcut name -->
    <string name="shortcut_activity_name">One Handed Mode</string>
    <string name="action_none">None</string>
    <string name="action_movable_screen">Movable Screen</string>
    <string name="action_pin">Pin</string>
    <string name="action_pin_or_reset">Slide Down</string>
    <string name="action_small_screen">Small Screen</string>
    <string name="action_extra_action">Extra Action</string>
    <string name="action_cs_swap_left_right">Swap Left/Right</string>
    <string name="action_reset">Reset</string>
    <string name="action_soft_reset">Soft Reset</string>
    <string name="action_sb_expand_notifications">Expand Notifications With Extra Action</string>
    <string name="action_sb_expand_quick_settings">Expand Quick Settings With Extra Action</string>

    <!-- App Selector -->
    <string name="app_select_activity_name">Select</string>
    <string name="only_selected">Only selected</string>
    <string name="blacklist_activity_name">Blacklist</string>
    <string name="another_resize_method_targets_activity_name">Another Resize Method Targets</string>

    <!-- Initial Position -->
    <string name="initial_position_activity_name">Initial Position</string>

    <!-- Small Screen -->
    <string name="small_screen_activity_name">Small Screen</string>

    <!-- About -->
    <string name="about_activity_name">About</string>
    <string name="about_summary">Action Intent Consumer</string>
    <string name="about_content_text">Niwatori is developed by tkgktyk and maintained by zhougy0717.\nThis is a module of Xposed framework made by rovo89. This mod doesn\'t exist without them.</string>
    <string name="about_translation_label">Translation support</string>
    <string name="japanese_translater">- Japanese by tkgktyk</string>
    <string name="russian_translater">- Russian by bonny_k-9</string>
    <string name="chinese_simplified_translater">- Chinese Simplified by zhougy0717</string>

    <!-- Persistent Service -->
    <string name="state_persistent_small_screen">Persistent Small Screen</string>

    <!-- Intro Activity -->
    <string name="slide1_title">Xposed Module</string>
    <string name="slide1_description">You have to flash in Xposed Framework. Otherwise, Niwatori can do nothing.</string>
    <string name="slide2_title">3 Modes to Try</string>
    <string name="slide2_description">Hook with your favourite shortcut launcher, e.g. fooview, GravityBox and etc.</string>
    <string name="triggering_gesture_title">Triggering Gesture</string>
    <string name="triggering_gesture_description">Besides 3rd party shorcut launchers, you can also trigger one hand mode by swiping up or down on the screen edge. Now it only supports small screen mode.</string>
    <string name="slide3_title">Fancy Small Screen Mode</string>
    <string name="slide3_description">The content view can be shrunk. You can also use gestures outside the content to manipulate the view. You can double tap, fling up and down or scroll left and right.</string>
    <string name="slide4_title">Notification Panel Applicable</string>
    <string name="slide4_description">Double tap in the shadow. Play fun with shrunk notification panel.</string>
    <string name="slide5_title">Explor for more</string>
    <string name="slide5_description">There are bunch of configurations in Settings. Play with it and you will have a better Niwatori.</string>
</resources>
