<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:divider="?android:attr/dividerHorizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:showDividers="middle"
              tools:context=".app.AboutActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/about_text_margin"
        android:layout_marginTop="@dimen/about_text_margin"
        android:text="@string/about_content_text"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <!-- Translation -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/about_text_margin"
        android:layout_marginTop="@dimen/about_text_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_translation_label"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/about_text_margin"
            android:layout_marginRight="@dimen/about_text_margin"
            android:text="@string/japanese_translater"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/about_text_margin"
            android:layout_marginRight="@dimen/about_text_margin"
            android:text="@string/russian_translater"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/about_text_margin"
            android:layout_marginRight="@dimen/about_text_margin"
            android:text="@string/chinese_simplified_translater"/>
    </LinearLayout>

    <!--TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/about_text_margin"
        android:layout_marginTop="@dimen/about_text_margin"
        android:text="And thank you for supports via donations and discussions."/-->

    <!--TextView
        android:id="@+id/thank_you_for_donation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/about_text_margin"
        android:layout_marginTop="@dimen/about_text_margin"
        android:text="Thank you for your donation!"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"/-->
</LinearLayout>